--- a/src/views/Home/_home.scss
+++ b/src/views/Home/_home.scss
@@ -1,8 +1,8 @@
-.home {
-    padding: 70px 0;
-    text-align: center;
-    p{
-    font-size: 17px;
-    color: #333; 
-    }
+@import "../../main.scss";
+
+body {
+  background-color: $light-gray;
+  font-family: $base-font-family;
+  margin: 0;
+  padding: 0;
 }
