--- a/client/src/components/NavBar/_navbar.scss
+++ b/client/src/components/NavBar/_navbar.scss
@@ -31,21 +31,11 @@
     padding: 7px 5px 9px 15px;
     flex: 1;
 
-    .nav-icon-search {
-      color: #666;
-      font-size: 16px;
-      font-style: normal;
-
-      span {
-        display: none;
-      }
-    }
-
     .nav-search-btn {
       background: none;
       border: none;
-      border-left: 1px solid #e6e6e6;
-      color: #666;
+      border-left: 1px solid $light-gray;
+      color: $gray;
       cursor: pointer;
       height: 26px;
       outline: none;
@@ -53,7 +43,7 @@
     }
 
     .nav-search-input {
-      background-color: #fff;
+      background-color: $white;
       border: none;
       box-sizing: border-box;
       flex: 1;
@@ -62,7 +52,7 @@
       outline: none;
 
       &::placeholder {
-        color: #bbb;
+        color: $gray;
         font-weight: 200;
       }
     }
