refactor styles and folders

--- a/client/src/components/Item/styles.scss
+++ b/client/src/components/Item/styles.scss
@@ -1,8 +1,8 @@
-@import "../../main.scss";
+@import "../../styles/main.scss";
 
 hr {
   margin-inline-start: 1.5em;
-  margin-inline-end:  1.5em;
+  margin-inline-end: 1.5em;
   border-top: 1px solid $light-gray;
 }
 
