--- a/client/src/components/ItemList/styles.scss
+++ b/client/src/components/ItemList/styles.scss
@@ -1,4 +1,4 @@
-@import "../../main.scss";
+@import "../../styles/main.scss";
 
 .search-results {
   background-color: white;
@@ -7,7 +7,8 @@
   max-width: 876px;
   padding: 0;
   width: 100%;
-
+  box-sizing: border-box;
+  border-radius: 4px;
   li:first-child {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
@@ -19,4 +20,3 @@
   justify-content: center;
   width: 100%;
 }
-
