--- a/client/src/components/ItemDetail/styles.scss
+++ b/client/src/components/ItemDetail/styles.scss
@@ -14,7 +14,7 @@
 .item-item-details {
   border-radius: 4px;
   padding: 32px;
-  background-color: #fff;
+  background-color: $white;
   margin: 16px 0;
 
   .item-grid {
@@ -74,7 +74,7 @@
   }
 
   .item-description {
-    color: $black;
+    color: $gray;
     font-size: 16px;
     overflow: hidden;
 
