--- a/client/src/styles/colors.scss
+++ b/client/src/styles/colors.scss
@@ -1,8 +1,6 @@
 $yellow: #fff159;
 $white: #fff;
 $black: #333;
-$dark-blue: #03264C;
-$light-blue: #1259c3;
+$light-blue: #3483fa;
 $gray: #666666;
 $light-gray: #ebebeb;
-$green: #39b54a;
