--- a/client/src/views/NotFound/styles.scss
+++ b/client/src/views/NotFound/styles.scss
@@ -1,8 +1,11 @@
+@import "../../styles/main.scss";
+
 .not-found {
   padding: 70px 0;
   text-align: center;
   P {
     font-size: 17px;
-    color: #333;
+    color: $black;
   }
 }
+
