--- a/client/src/components/ItemList/styles.scss
+++ b/client/src/components/ItemList/styles.scss
@@ -20,3 +20,10 @@
   justify-content: center;
   width: 100%;
 }
+
+.search-results-not-found {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 50px;
+}
